--- a/public/index_style.css
+++ b/public/index_style.css
@@ -2,7 +2,7 @@ html {
     font-size: 1.5rem;
     font-family: sans-serif;
     text-align: center;
-    
+    background-color: #e1eeff;
 }
 
 .long-input {
@@ -60,6 +60,7 @@ html {
     padding: 0.8rem;
     font-size: 0.5rem;
     opacity: 85%;
+    height: 5rem;
 }
 
 #less {
@@ -70,4 +71,9 @@ html {
     padding: 0.8rem;
     font-size: 0.5rem;
     opacity: 85%;
+    height: 5rem;
+}
+
+h4 {
+    min-height: 1.5rem;
 }
